# ChromaHD-mixdtools

./: .gitignore  README.md
checkperiodic/: checkperiodic.cpp
chromatogram/: .gitignore  Makefile  chromatogram.cpp  dunavant.cpp  dunavant.hpp
extractRNG/: .gitignore  .gitmodules  Makefile  extractRNG.cpp  mixd.hpp
extractTS/: Makefile  extractTS.cpp  mixd.hpp
genmprd/: Makefile  SimpleProgress.hpp  genmprd.cpp
gennmat/: .gitignore  gennmat.cpp
gmsh2mixd/: Makefile  SimpleProgress.hpp  gmsh2mixd_2D.cpp  gmsh2mixd_3D.cpp
gmsh2mixdv2/: Makefile  elements.h  endian.cpp  endian.h  gmsh2mixdv2.cpp  mesh.h  node.h  physicalGroup.h  writeMIXD.h
gmsh2mixdv2/examples/ref/: mien  minf  mtbl  mxyz
gmsh2mixdv2/examples/ref_d4/: mien  minf  mmat  mrng  mtbl  mtbl.dual  mxyz
mapflow/: mapflow.cpp  mixd.hpp
mixd2pvtu/: CMakeLists.txt  LDEMVTKXMLPUnstructuredDataWriter.h  README.md  constants.h  default.nix  main.cpp  mixd2pvtu.in.example  postProcessor.cpp  postProcessor.h  settings.cpp  settings.h  settings.in.example  tet.cpp  tet.h
mixd2pvtu/doc/: architecture.md
mixd2pvtu/src/: CMakeLists.txt  config.cpp  config.hpp  element.hpp  main.cpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  utils.cpp  utils.hpp
mixd2pvtu/test/sphere/: mien  minf  mrng  mxyz  sph.msh2  (+2 more)
mixdcheck/: Makefile  mixdcheck.cpp
mixdclass/: mixd.hpp
mixdsplit/: .gitignore  mixdsplit.cpp
mixdvolume/: mixdvolume.cpp  mixdvolume_cart.cpp
normmixd/: Makefile  normmixd.cpp
rmmat/: rmmat.cpp
scalemixd/: scalemixd.cpp
shiftmixd/: shiftmixd.cpp
stitchperiodic/: stitchperiodic.cpp
